added code to plot data

--- a/assignment_ecg.ipynb
+++ b/assignment_ecg.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "CiDn2Sk-VWqE",
         "outputId": "1e31da2d-b790-4266-86d3-a154d061a6da",
@@ -141,6 +141,21 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plot example columns\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "fig, ax = plt.subplots()  # Create a figure and an axes.\n",
+        "ax.scatter(x='0_0', y='0_1', c='0_2', data = data)"
+      ],
+      "metadata": {
+        "id": "1BJpJdJlFqSm"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
