--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -61,7 +61,9 @@
     "\n",
     "data = load_data()\n",
     "print(f'The number of samples: {len(data.index)}')\n",
-    "print(f'The number of columns: {len(data.columns)}')\n"
+    "print(f'The number of columns: {len(data.columns)}')\n",
+    "\n",
+    "\n"
    ]
   },
   {
