fixed labelswap after splitting files

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [
         {
@@ -89,15 +89,15 @@
           "output_type": "stream",
           "text": [
             "['liposarcoma', 'lipoma']\n",
-            "Categories (2, object): ['lipoma' < 'liposarcoma']\n"
+            "Categories (2, object): ['liposarcoma' < 'lipoma']\n"
           ]
         }
       ],
       "source": [
-        "# change lipoma = 0 and liposarcoma = 1 and encode labels\n",
+        "# change lipoma = 1 and liposarcoma = 0 and encode labels\n",
         "group_names = list(set(data.label))\n",
-        "data.loc[data['label'] == 'lipoma', 'label'] = 0\n",
-        "data.loc[data['label'] == 'liposarcoma', 'label'] = 1\n",
+        "data.loc[data['label'] == 'lipoma', 'label'] = 1\n",
+        "data.loc[data['label'] == 'liposarcoma', 'label'] = 0\n",
         "data['label'] = pd.cut(data['label'], bins = 2, labels=group_names)\n",
         "print(data['label'].unique())\n",
         "label_diag = LabelEncoder()\n",
@@ -111,13 +111,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "TEST_set.csv already exists\n",
             "None\n"
           ]
         }
@@ -145,13 +146,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['liposarcoma', 'lipoma']\n",
+            "Categories (2, object): ['liposarcoma' < 'lipoma']\n"
+          ]
+        }
+      ],
       "source": [
         "TRAIN = pd.read_csv('TRAIN_set.csv', index_col=0)\n",
         "X_train = TRAIN.drop('label', axis=1)\n",
         "y_train = TRAIN['label']\n",
+        "\n",
+        "TRAIN['label'] = pd.cut(TRAIN['label'], bins = 2, labels=group_names)\n",
+        "print(TRAIN['label'].unique())\n",
+        "label_diag = LabelEncoder()\n",
+        "TRAIN['label'] = label_diag.fit_transform(TRAIN['label'])\n",
         "\n",
         "# split into training and validation set\n",
         "X_train, X_valid, y_train, y_valid = train_test_split(X_train, y_train, test_size=0.3, random_state=10)\n",
@@ -172,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
@@ -181,15 +196,15 @@
           "text": [
             "rfc               precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.80      0.31      0.44        13\n",
-            "           1       0.53      0.91      0.67        11\n",
+            "           0       0.56      0.91      0.69        11\n",
+            "           1       0.83      0.38      0.53        13\n",
             "\n",
-            "    accuracy                           0.58        24\n",
-            "   macro avg       0.66      0.61      0.56        24\n",
-            "weighted avg       0.67      0.58      0.55        24\n",
+            "    accuracy                           0.62        24\n",
+            "   macro avg       0.69      0.65      0.61        24\n",
+            "weighted avg       0.71      0.62      0.60        24\n",
             "\n",
-            "[[ 4  9]\n",
-            " [ 1 10]]\n"
+            "[[10  1]\n",
+            " [ 8  5]]\n"
           ]
         }
       ],
