Added variance threshold to X_test too

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -77,188 +77,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[0, 1]\n",
-            "Categories (2, int64): [0 < 1]\n",
-            "            label  PREDICT_original_sf_compactness_avg_2.5D  \\\n",
-            "ID                                                            \n",
-            "Lipo-001_0      0                                  0.368434   \n",
-            "Lipo-002_0      0                                  0.660571   \n",
-            "Lipo-003_0      1                                  0.365191   \n",
-            "Lipo-004_0      0                                  0.372210   \n",
-            "Lipo-005_0      1                                  0.369120   \n",
-            "\n",
-            "            PREDICT_original_sf_compactness_std_2.5D  \\\n",
-            "ID                                                     \n",
-            "Lipo-001_0                                  0.262371   \n",
-            "Lipo-002_0                                  0.179013   \n",
-            "Lipo-003_0                                  0.157712   \n",
-            "Lipo-004_0                                  0.169761   \n",
-            "Lipo-005_0                                  0.167485   \n",
-            "\n",
-            "            PREDICT_original_sf_rad_dist_avg_2.5D  \\\n",
-            "ID                                                  \n",
-            "Lipo-001_0                              26.200395   \n",
-            "Lipo-002_0                              55.155046   \n",
-            "Lipo-003_0                              30.577026   \n",
-            "Lipo-004_0                              94.006805   \n",
-            "Lipo-005_0                              94.612701   \n",
-            "\n",
-            "            PREDICT_original_sf_rad_dist_std_2.5D  \\\n",
-            "ID                                                  \n",
-            "Lipo-001_0                               8.174390   \n",
-            "Lipo-002_0                               9.318741   \n",
-            "Lipo-003_0                               8.963647   \n",
-            "Lipo-004_0                              33.512409   \n",
-            "Lipo-005_0                              31.250821   \n",
-            "\n",
-            "            PREDICT_original_sf_roughness_avg_2.5D  \\\n",
-            "ID                                                   \n",
-            "Lipo-001_0                               20.940000   \n",
-            "Lipo-002_0                                9.546044   \n",
-            "Lipo-003_0                               17.695139   \n",
-            "Lipo-004_0                               21.049148   \n",
-            "Lipo-005_0                               17.059573   \n",
-            "\n",
-            "            PREDICT_original_sf_roughness_std_2.5D  \\\n",
-            "ID                                                   \n",
-            "Lipo-001_0                               13.551937   \n",
-            "Lipo-002_0                                7.051937   \n",
-            "Lipo-003_0                               10.772365   \n",
-            "Lipo-004_0                               15.928362   \n",
-            "Lipo-005_0                               15.239905   \n",
-            "\n",
-            "            PREDICT_original_sf_convexity_avg_2.5D  \\\n",
-            "ID                                                   \n",
-            "Lipo-001_0                                0.694139   \n",
-            "Lipo-002_0                                0.871182   \n",
-            "Lipo-003_0                                0.704710   \n",
-            "Lipo-004_0                                0.754497   \n",
-            "Lipo-005_0                                0.774545   \n",
-            "\n",
-            "            PREDICT_original_sf_convexity_std_2.5D  \\\n",
-            "ID                                                   \n",
-            "Lipo-001_0                                0.227848   \n",
-            "Lipo-002_0                                0.125279   \n",
-            "Lipo-003_0                                0.137529   \n",
-            "Lipo-004_0                                0.186559   \n",
-            "Lipo-005_0                                0.192922   \n",
-            "\n",
-            "            PREDICT_original_sf_cvar_avg_2.5D  ...  \\\n",
-            "ID                                             ...   \n",
-            "Lipo-001_0                           0.096312  ...   \n",
-            "Lipo-002_0                           0.030465  ...   \n",
-            "Lipo-003_0                           0.088020  ...   \n",
-            "Lipo-004_0                           0.123775  ...   \n",
-            "Lipo-005_0                           0.119364  ...   \n",
-            "\n",
-            "            PREDICT_original_phasef_phasesym_median_WL3_N5  \\\n",
-            "ID                                                           \n",
-            "Lipo-001_0                                        0.049726   \n",
-            "Lipo-002_0                                        0.036186   \n",
-            "Lipo-003_0                                        0.128167   \n",
-            "Lipo-004_0                                        0.000000   \n",
-            "Lipo-005_0                                        0.000000   \n",
-            "\n",
-            "            PREDICT_original_phasef_phasesym_std_WL3_N5  \\\n",
-            "ID                                                        \n",
-            "Lipo-001_0                                     0.196019   \n",
-            "Lipo-002_0                                     0.167471   \n",
-            "Lipo-003_0                                     0.220546   \n",
-            "Lipo-004_0                                     0.107987   \n",
-            "Lipo-005_0                                     0.087662   \n",
-            "\n",
-            "            PREDICT_original_phasef_phasesym_skewness_WL3_N5  \\\n",
-            "ID                                                             \n",
-            "Lipo-001_0                                          0.927821   \n",
-            "Lipo-002_0                                          1.137972   \n",
-            "Lipo-003_0                                          0.829650   \n",
-            "Lipo-004_0                                          3.130011   \n",
-            "Lipo-005_0                                          3.284943   \n",
-            "\n",
-            "            PREDICT_original_phasef_phasesym_kurtosis_WL3_N5  \\\n",
-            "ID                                                             \n",
-            "Lipo-001_0                                         -0.407270   \n",
-            "Lipo-002_0                                          0.411968   \n",
-            "Lipo-003_0                                         -0.520344   \n",
-            "Lipo-004_0                                         10.399652   \n",
-            "Lipo-005_0                                         11.840826   \n",
-            "\n",
-            "            PREDICT_original_phasef_phasesym_peak_WL3_N5  \\\n",
-            "ID                                                         \n",
-            "Lipo-001_0                                           0.0   \n",
-            "Lipo-002_0                                           0.0   \n",
-            "Lipo-003_0                                           0.0   \n",
-            "Lipo-004_0                                           0.0   \n",
-            "Lipo-005_0                                           0.0   \n",
-            "\n",
-            "            PREDICT_original_phasef_phasesym_peak_position_WL3_N5  \\\n",
-            "ID                                                                  \n",
-            "Lipo-001_0                                                  0       \n",
-            "Lipo-002_0                                                  0       \n",
-            "Lipo-003_0                                                  0       \n",
-            "Lipo-004_0                                                  0       \n",
-            "Lipo-005_0                                                  0       \n",
-            "\n",
-            "            PREDICT_original_phasef_phasesym_range_WL3_N5  \\\n",
-            "ID                                                          \n",
-            "Lipo-001_0                                       0.625304   \n",
-            "Lipo-002_0                                       0.563659   \n",
-            "Lipo-003_0                                       0.705679   \n",
-            "Lipo-004_0                                       0.438399   \n",
-            "Lipo-005_0                                       0.356330   \n",
-            "\n",
-            "            PREDICT_original_phasef_phasesym_energy_WL3_N5  \\\n",
-            "ID                                                           \n",
-            "Lipo-001_0                                     3238.304991   \n",
-            "Lipo-002_0                                    15364.724390   \n",
-            "Lipo-003_0                                     3771.798158   \n",
-            "Lipo-004_0                                     4707.658397   \n",
-            "Lipo-005_0                                     6171.440113   \n",
-            "\n",
-            "            PREDICT_original_phasef_phasesym_quartile_range_WL3_N5  \\\n",
-            "ID                                                                   \n",
-            "Lipo-001_0                                           0.315148        \n",
-            "Lipo-002_0                                           0.251255        \n",
-            "Lipo-003_0                                           0.369366        \n",
-            "Lipo-004_0                                           0.000000        \n",
-            "Lipo-005_0                                           0.000000        \n",
-            "\n",
-            "            PREDICT_original_phasef_phasesym_entropy_WL3_N5  \n",
-            "ID                                                           \n",
-            "Lipo-001_0                                        14.462361  \n",
-            "Lipo-002_0                                        17.170274  \n",
-            "Lipo-003_0                                        14.394812  \n",
-            "Lipo-004_0                                        15.733482  \n",
-            "Lipo-005_0                                        16.682154  \n",
-            "\n",
-            "[5 rows x 494 columns]\n",
-            "[[-0.06896609  0.19614026 -0.85233803 ... -0.65606844 -1.42908577\n",
-            "  -1.34198741]\n",
-            " [-1.00021849  0.64282965  0.97477001 ...  1.13432028  0.62755147\n",
-            "   1.17725266]\n",
-            " [ 0.81313167 -0.57854378  2.679078   ...  0.64115649 -1.42908577\n",
-            "   1.60914239]\n",
-            " ...\n",
-            " [-0.84025635  1.55569853 -0.99153506 ... -0.52358715  0.67204122\n",
-            "  -0.90344033]\n",
-            " [-1.53550315  0.82693849  0.15842472 ... -0.33635456 -1.41952079\n",
-            "   0.32485038]\n",
-            " [ 0.11284454  0.15136892 -0.83247575 ... -0.45424561  1.21700867\n",
-            "  -0.48646213]]\n",
+            "['liposarcoma', 'lipoma']\n",
+            "Categories (2, object): ['lipoma' < 'liposarcoma']\n",
             "All values are numerical.\n",
-            "No NaN values.\n"
+            "Not removed:  (64, 493)\n",
+            "Removed zero variance:  (64, 474)\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.preprocessing import StandardScaler, LabelEncoder, Imputer\n",
+        "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.feature_selection import VarianceThreshold\n",
         "# change lipoma = 0 and liposarcoma = 1 and encode labels\n",
         "group_names = list(set(data.label))\n",
         "data.loc[data['label'] == 'lipoma', 'label'] = 0\n",
@@ -267,7 +104,6 @@
         "print(data['label'].unique())\n",
         "label_diag = LabelEncoder()\n",
         "data['label'] = label_diag.fit_transform(data['label'])\n",
-        "print(data.head())\n",
         "\n",
         "# assign X to measurements and y to outcome (lipoma/sarcoma)\n",
         "X = data.drop('label', axis=1)\n",
@@ -283,15 +119,22 @@
         "sc = StandardScaler()\n",
         "X_train = sc.fit_transform(X_train)\n",
         "X_test = sc.transform(X_test)\n",
-        "print(X_train)\n",
         "\n",
         "# preprocess the data (trainset eventually)\n",
         "if not str in data.values:\n",
         "    print(f'All values are numerical.')\n",
-        "if data.isnull().values.any():\n",
-        "    imp = Imputer(missing_value='NaN', strategy='mean', axis=0)\n",
-        "    imp.fit(data)\n",
-        "    data = imp.transform(data)\n"
+        "if np.isnan(X_train).any():\n",
+        "    imp = SimpleImputer(missing_value=np.nan, strategy='mean')\n",
+        "    X_train.iloc[:,:] = imp.fit_transform(X_train)\n",
+        "    X_test.iloc[:,:] = imp.fit(X_test)\n",
+        "    print(f'All NaN values replaced by mean value of the column.')\n",
+        "\n",
+        "# remove features with zero variance\n",
+        "print(f'Not removed: ',X_train.shape)\n",
+        "vt = VarianceThreshold(threshold=0)\n",
+        "X_train = vt.fit_transform(X_train)\n",
+        "X_test = vt.transform(X_test)\n",
+        "print(f'Removed zero variance: ', X_train.shape)\n"
       ]
     },
     {
@@ -304,9 +147,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "rfc               precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.67      0.62      0.64        13\n",
+            "           1       0.55      0.60      0.57        10\n",
+            "\n",
+            "    accuracy                           0.61        23\n",
+            "   macro avg       0.61      0.61      0.61        23\n",
+            "weighted avg       0.61      0.61      0.61        23\n",
+            "\n",
+            "[[8 5]\n",
+            " [4 6]]\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# try a classifier\n",
