Addition of data preprocessing

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -51,6 +51,8 @@
         "from sklearn import metrics\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.feature_selection import VarianceThreshold\n",
         "\n",
         "# Classifiers\n",
         "from sklearn.naive_bayes import GaussianNB\n",
@@ -174,7 +176,23 @@
         "# scale the training set\n",
         "sc = StandardScaler()\n",
         "X_train = sc.fit_transform(X_train)\n",
-        "X_valid = sc.transform(X_valid)\n"
+        "X_valid = sc.transform(X_valid)\n",
+        "\n",
+        "# preprocess the data \n",
+        "if not str in data.values:\n",
+        "    print(f'All values are numerical.')\n",
+        "if np.isnan(X_train).any():\n",
+        "    imp = SimpleImputer(missing_value=np.nan, strategy='mean')\n",
+        "    X_train.iloc[:,:] = imp.fit_transform(X_train)\n",
+        "    X_valid.iloc[:,:] = imp.fit(X_valid)\n",
+        "    print(f'All NaN values replaced by mean value of the column.')\n",
+        "\n",
+        "# remove features with zero variance\n",
+        "print(f'Size before removal zero variances: ', X_train.shape)\n",
+        "vt = VarianceThreshold(threshold=0)\n",
+        "X_train = vt.fit_transform(X_train)\n",
+        "X_test = vt.transform(X_valid)\n",
+        "print(f'Size after removal zero variance: ', X_train.shape)"
       ]
     },
     {
