--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -25,7 +25,10 @@
    "outputs": [],
    "source": [
     "# Run this to use from colab environment\n",
-    "#!pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git"
+    "#!pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git\n",
+    "\n",
+    "import numpy\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -39,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -61,9 +64,7 @@
     "\n",
     "data = load_data()\n",
     "print(f'The number of samples: {len(data.index)}')\n",
-    "print(f'The number of columns: {len(data.columns)}')\n",
-    "\n",
-    "\n"
+    "print(f'The number of columns: {len(data.columns)}')"
    ]
   },
   {
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +430,7 @@
        "[5 rows x 494 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +461,7 @@
        "Length: 494, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +501,7 @@
        "      dtype='object', length=494)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -538,6 +539,7 @@
     "\n",
     "#Amount of GIST\n",
     "print(\"The amount of gists in the dataset is\", len(data[data.label=='GIST']))\n",
+    "\n",
     "#Amount of non-GIST\n",
     "print(\"The amount of non-gists in the dataset is\", len(data[data.label=='non-GIST']))"
    ]
@@ -552,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +574,7 @@
        "Length: 494, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,14 +597,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "#split data in features and label\n",
     "y = data['label']\n",
     "X = data.drop(['label'], axis=1)\n",
-    "\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
@@ -626,13 +627,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import preprocessing\n",
     "\n",
-    "X_train_scaled = preprocessing.StandardScaler().fit_transform(X_train)"
+    "X_train_scaled = preprocessing.StandardScaler().fit_transform(X_train)\n",
+    "\n",
+    "X_train_scaled = pd.DataFrame(X_train_scaled, columns = X.columns)"
    ]
   },
   {
@@ -646,36 +649,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_selection import VarianceThreshold\n",
+    "variance_tres = VarianceThreshold(0) # of VarianceThreshold(threshold=(.8 * (1 - .8))) ?\n",
+    "selection = variance_tres.fit(X_train_scaled)\n",
+    "a = selection.get_support()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-1.17608232,  2.83958564,  0.64833893, ...,  0.58798237,\n",
-       "        -0.36417837,  1.32229703],\n",
-       "       [ 0.49347027, -0.53945932,  0.8201891 , ...,  0.18061697,\n",
-       "        -0.36417837,  1.11564879],\n",
-       "       [-0.80253627,  1.57235364,  1.45048308, ..., -0.24681107,\n",
-       "        -0.36417837,  0.57233173],\n",
-       "       ...,\n",
-       "       [ 0.44808211, -0.50067421,  0.72377283, ...,  0.09371332,\n",
-       "        -0.36417837,  0.95556883],\n",
-       "       [-0.88331702, -0.06633901,  0.16538468, ..., -0.1321743 ,\n",
-       "        -0.36417837,  0.43597763],\n",
-       "       [-1.32805174,  1.85142973,  0.75634146, ..., -0.31234196,\n",
-       "        -0.36417837,  0.28900335]])"
+       "['PREDICT_original_tf_LBP_max_R3_P12',\n",
+       " 'PREDICT_original_tf_LBP_peak_R3_P12',\n",
+       " 'PREDICT_original_tf_LBP_peak_position_R3_P12',\n",
+       " 'PREDICT_original_tf_LBP_max_R8_P24',\n",
+       " 'PREDICT_original_tf_LBP_peak_position_R8_P24',\n",
+       " 'PREDICT_original_tf_LBP_max_R15_P36',\n",
+       " 'PREDICT_original_tf_LBP_peak_position_R15_P36',\n",
+       " 'PREDICT_original_phasef_phasecong_min_WL3_N5',\n",
+       " 'PREDICT_original_phasef_phasecong_peak_WL3_N5',\n",
+       " 'PREDICT_original_phasef_phasecong_peak_position_WL3_N5',\n",
+       " 'PREDICT_original_phasef_phasesym_min_WL3_N5',\n",
+       " 'PREDICT_original_phasef_phasesym_peak_WL3_N5',\n",
+       " 'PREDICT_original_phasef_phasesym_peak_position_WL3_N5']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.feature_selection import VarianceThreshold\n",
-    "X_train_scaled_LV = VarianceThreshold(threshold=(.8 * (1 - .8)))\n",
-    "X_train_scaled_LV.fit_transform(X_train_scaled)"
+    "dropped_columns_df = [column for column in X_train_scaled.columns if column not in X_train_scaled.columns[a]]\n",
+    "dropped_columns_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "high_variance = X_train_scaled.drop(dropped_columns_df,axis=1)"
    ]
   },
   {
@@ -688,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
