removed some excess code

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -127,15 +127,7 @@
       ],
       "source": [
         "# code that splits the data into test and validation sets if this is not done already\n",
-        "\n",
-        "split_action = split_set(X,y,test_size)\n",
-        "print(split_action)\n",
-        "\n",
-        "# if os.path.exists('./TEST_set.csv'):\n",
-        "#     print('TEST_set.csv already exists')\n",
-        "# else:\n",
-        "#     split_set(X,y,test_size)\n",
-        "#     print('TEST_set.csv does not exist, generating new test and training sets')"
+        "split_set(X,y,test_size)"
       ]
     },
     {
