Creating code blocks to work in

--- a/assignment_ecg.ipynb
+++ b/assignment_ecg.ipynb
@@ -15,7 +15,7 @@
         "id": "5EG78VSHfhNi"
       },
       "source": [
-        "## 1. Data loading and cleaning\n",
+        "## 1. Data loading, cleaning and visualization\n",
         "\n",
         "Below we load the ECG data, convert it to a dataframe an clean the data.First we are going to start with loading the CS file into a dataframe"
       ]
@@ -79,10 +79,63 @@
       "cell_type": "code",
       "source": [
         "# Test dataset for missing data\n",
-        "\n"
+        "df.isnull()\n"
       ],
       "metadata": {
         "id": "nJ4-hqtyf0DU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test dataset for missing rows/columns"
+      ],
+      "metadata": {
+        "id": "nZLKTGMpmxOc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Cleaning dataset"
+      ],
+      "metadata": {
+        "id": "T-mrfMKCm1iX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Visualisatie van de data"
+      ],
+      "metadata": {
+        "id": "OaN6z_VynlYI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Code voor ziek en niet ziek"
+      ],
+      "metadata": {
+        "id": "6uzs9dYjnrHt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Code voor visualisatie"
+      ],
+      "metadata": {
+        "id": "r6vBeZo2nnlX"
       },
       "execution_count": null,
       "outputs": []
@@ -96,6 +149,195 @@
       "metadata": {
         "id": "hbyr7EH1fUE3"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Initial split"
+      ],
+      "metadata": {
+        "id": "nIf-5Y4zm3ND"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "hallo text"
+      ],
+      "metadata": {
+        "id": "cbjIkU58n9jL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Cross-validatie"
+      ],
+      "metadata": {
+        "id": "crs2LP3lm5pf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "hallo text"
+      ],
+      "metadata": {
+        "id": "1Lhn-8RLn-xp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Extra blokje"
+      ],
+      "metadata": {
+        "id": "70FYCJPem8Sz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Feature scaling"
+      ],
+      "metadata": {
+        "id": "WIucopYVnYBI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hallo tekst"
+      ],
+      "metadata": {
+        "id": "qYnQ0Ml9oA1G"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Blokje 1"
+      ],
+      "metadata": {
+        "id": "7lPiglbIne_l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hallo tekst"
+      ],
+      "metadata": {
+        "id": "J9t4kREtoB0a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Blokje 2"
+      ],
+      "metadata": {
+        "id": "nVCz7FgOnglf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hallo tekst"
+      ],
+      "metadata": {
+        "id": "Sw0PgQvOoC2L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Blokje 3"
+      ],
+      "metadata": {
+        "id": "eL6ue3Qwnh62"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4. Feature selection"
+      ],
+      "metadata": {
+        "id": "UXm9Ps4sm-v-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hallo tekst"
+      ],
+      "metadata": {
+        "id": "jWntzXM0oGlg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Blokje 1"
+      ],
+      "metadata": {
+        "id": "rB8WQrT8nBlD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hallo tekst"
+      ],
+      "metadata": {
+        "id": "7Fo3B9GtoHfW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Blokje 2"
+      ],
+      "metadata": {
+        "id": "YS-1NeZunEfi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hallo tekst"
+      ],
+      "metadata": {
+        "id": "DjUe1_wAoJpk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Blokje 3"
+      ],
+      "metadata": {
+        "id": "a3_dsVkEoKto"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
